# veilbreakers-gamedev-toolkit

./: .continue-here.md  .gitignore  .ignore  .mcp.json  CLAUDE.md  FULL_SCAN_AND_FIXES_SUMMARY.md  GEMINI.md  README.md  full_scan_issues.json  opencode.json  requirements.txt  reviewer_validation.json  reviewer_validation_production.json
Tools/mcp-toolkit/: .coverage  .env.example  .gitignore  .tmp_assets_findings.json  .tmp_reviewer_scan.json  .tmp_reviewer_scan_after_helper_cleanup.json  .tmp_reviewer_scan_after_medium_cleanup.json  .tmp_reviewer_scan_postfix.json  .tmp_verification_sample.json  AUDIT_REPORT_2026_03_27.md  AUDIT_TECHNICAL_DETAILS.md  DESIGN_loop_prevention.md  GAPS_FOUND.txt  READ_AUDIT_RESULTS.txt  _apply_fixes.py  _tmp_castle_qa.py  conftest.py  pipeline.local.env  pyproject.toml  reviewer_results.json  scan_advisory_full.json  scan_all_findings.json  scan_current.json  scan_strict.json  verify_tools.py
Tools/mcp-toolkit/analyzer-harness/: VBAnalyzerHarness.csproj
Tools/mcp-toolkit/blender_addon/: __init__.py  security.py  socket_server.py
Tools/mcp-toolkit/docs/: AAA_3D_PIPELINE.md  BLENDER_EXTERNAL_TOOLCHAIN.md  TOOLKIT_WORLD_AUDIT_2026-03-27.md
Tools/mcp-toolkit/scripts/: aaa_blender_addons.manifest.json  blender_client.py  bootstrap_aaa_pipeline.ps1
Tools/mcp-toolkit/tests/: conftest.py  test_aaa_castle_settlement.py  test_aaa_combat_interiors.py  test_aaa_final_verification.py  test_aaa_foundation_wiring.py  test_aaa_materials.py  test_aaa_performance_budget.py  test_aaa_visual_verification.py  test_addon_toolchain.py  test_animation_abilities.py  test_animation_blob.py  test_animation_combat.py  test_animation_export.py  test_animation_gaits.py  test_animation_handlers.py  test_animation_hover.py  test_animation_ik.py  test_animation_locomotion.py  test_animation_monster.py  test_animation_production.py  test_animation_quality_deep.py  test_animation_social.py  test_animation_spellcast.py  test_animation_templates.py  test_armor_meshes.py  test_armor_sets.py  test_asset_catalog.py  test_asset_templates.py  test_audio_middleware.py  test_audio_templates.py  test_blender_client.py  test_blender_server_tools.py  test_boss_presence.py  test_build_templates.py  test_building_grammar.py  test_building_grounding.py  test_building_interior_binding.py  test_building_quality.py  (+173 more)
(+870 files in other folders)
