[project]
name = "veilbreakers-mcp"
version = "0.1.0"
requires-python = ">=3.12"
# Note: xatlas==0.0.11 is installed into Blender's Python at runtime
# via the uv_ensure_xatlas handler. It is NOT a pip dependency of this package.
dependencies = [
    "mcp[cli]>=1.26.0",
    "Pillow>=12.1.0",
    "python-dotenv>=1.0.0",
    "pydantic-settings>=2.0",
]

[project.scripts]
vb-blender-mcp = "veilbreakers_mcp.blender_server:main"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
