[project]
name = "veilbreakers-mcp"
version = "3.1.0"
requires-python = ">=3.12"
# Note: xatlas==0.0.11 is installed into Blender's Python at runtime
# via the uv_ensure_xatlas handler. It is NOT a pip dependency of this package.
dependencies = [
    "mcp[cli]>=1.26.0",
    "Pillow>=12.1.0",
    "python-dotenv>=1.0.0",
    "pydantic-settings>=2.0",
    "tripo3d>=0.3.12",
    "fal-client>=0.5.0",
    "numpy>=1.26.0",
    "opensimplex>=0.4.5",
    "elevenlabs>=2.39.0",
    "google-genai>=1.0.0",
    "defusedxml>=0.7.1",
    "httpx>=0.27.0",
]

[project.scripts]
vb-blender-mcp = "veilbreakers_mcp.blender_server:main"
vb-unity-mcp = "veilbreakers_mcp.unity_server:main"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0",
    "ruff>=0.8.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.run]
source = ["src/veilbreakers_mcp"]
omit = ["*/tests/*"]

[tool.coverage.report]
fail_under = 80
show_missing = true
skip_covered = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
